2015-03-24  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* bmpimage.c, dpxcrypt.c, dvi.c, fontmap.[ch], jpegimage.c,
	pdfcolor.[ch], pdfdev.[ch], pdfdoc.c, pdfdraw.c, spc_tpic.c,
	spc_util.c, spc_xtx.c, xbb.c: Copyright "2014" => "2015".

2015-03-24  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dvipdfmx.c: Change "Copyright (C) 2002-2014" to
	"Copyright (C) 2002-2015".

2015-03-17  Khaled Hosny  <khaledhosny@eglug.org>

	* pdfcolor.c, pdfcolor.h, pdfdoc.c, pdfdraw.c, spc_util.c: Add spot
	colors support, based on patch by Apostolos Syropoulos.

2015-03-15  Khaled Hosny  <khaledhosny@eglug.org>

	* tests/*.{bb,xbb}: Update version number.

2015-03-15  Karl Berry  <karl@tug.org>

	* configure.ac: version 20150315 for TL'15.

2015-03-12  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* jpegimage.c: Fix a bug introduced by me on 2015-02-16.

2015-03-01  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* spc_tpic.c: Make tpic "ar" command dvips compatible to fix the problem
	that an excess line is drawn when "ar" command is used along
	with dvips transformation commands.

2015-02-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* fontmap.h (pdf_insert_native_fontmap_record): Declare also
	without '#ifdef XETEX'.
	* fontmap.c (pdf_insert_native_fontmap_record): Define also
	without '#ifdef XETEX'; drop redundant test for path==NULL.

2015-02-24  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvi.c (dvi_locate_native_font): Avoid sprintf() buffer overrun.

	* dvi.c (dvi_locate_native_font): Fix a small memory leak.

2015-02-21  Khaled Hosny  <khaledhosny@eglug.org>

	* dvi.c (dvi_locate_font, dvi_locate_native_font): make sure the
	all members of loaded font struct are initialized, avoid crash in
	dvi_close for simple fonts because hvmt member is not initialized.
	Fixes the xdvipdfmx-bkm test.
	* dvi.c (dvi_locate_native_font): fix loading files without absolute
	paths.
	* dvi.c (dvi_locate_native_font): fix loading TTC fonts.